# metai_interview

./: README.md
backend/: config.py  database.py  main.py  pyproject.toml
backend/models/: auth.py  file.py  user.py
backend/routers/: auth.py  files.py
backend/services/: auth_service.py  file_service.py  storage_service.py  thumbnail_service.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20251110111443_create_files_table.sql  20251111084430_add_thumbnail_fields.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FileCard.tsx  FileList.tsx  FileUpload.tsx  Icons.tsx  ProgressBar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts  useFileUpload.ts  useFiles.ts  usePagination.ts
frontend/src/lib/: api.ts  queryClient.ts  validators.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/providers/: QueryProvider.tsx
frontend/src/types/: auth.ts  file.ts
